# DeTikZify

./: .gitattributes  .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml
detikzify/dataset/: __init__.py
detikzify/dataset/paper2fig/: paper2fig.py
detikzify/dataset/scicap/: scicap.py
detikzify/evaluate/: __init__.py  clipscore.py  crystalbleu.py  dreamsim.py  eed.py  imagesim.py  kid.py  patchsim.py
detikzify/infer/: __init__.py  generate.py  tikz.py
detikzify/mcts/: montecarlo.py  node.py
detikzify/model/: __init__.py  configuration_detikzify.py  detikzify.py  image_processing_detikzify.py  modeling_detikzify.py  processing_detikzify.py
detikzify/model/adapter/: __init__.py  modeling_adapter.py  processing_adapter.py
detikzify/model/v1/: __init__.py  configuration_detikzify.py  modeling_detikzify.py  processing_detikzify.py
detikzify/train/: __init__.py  pretrain.py  train.py
detikzify/train/adapter/: __init__.py  pretrain.py  train.py
detikzify/util/: __init__.py  functools.py  generation.py  image.py  pil.py  subprocess.py  torch.py  trainer.py
detikzify/webui/: README.md  __init__.py  __main__.py  helpers.py  strings.py  webui.py
docker/: Dockerfile  README.md  docker-compose.yml
examples/: README.md  chat_eval.py  eval.py  infer.py  pretrain.py  refine.py  sketchify.py  train.py
examples/adapter/: README.md  pretrain.py  train.py
examples/tikzero/: README.md  chat_eval.py  pretrain.py  train.py
