[build-system]
requires = ["setuptools>=61", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "detikzify"
readme = "README.md"
license = {text = "Apache-2.0 License"}
dependencies = [
  "torch~=2.4.1",
  "transformers[accelerate,tokenizers]~=4.44.2",
  "datasets~=2.21.0",
  "Pillow~=10.4.0",
  "requests~=2.32.3",
  "numpy~=2.1.1",
  # pdf
  "PyMuPDF~=1.24.10",
  "pdf2image~=1.17.0",
  "pdfCropMargins~=2.1.4",
  # webui
  "gradio~=4.42.0",
  # evaluate
  "POT~=0.9.4",
  "torchmetrics~=1.4.1",
]
requires-python = "~=3.11"
dynamic = ["version"]

[project.optional-dependencies]
evaluate = [
  "Pygments~=2.18.0",
  "crystalbleu~=0.1.0",
  "sacremoses~=0.1.1",
  "dreamsim~=0.1.3"
]
examples = [
  "diffusers~=0.30.2"
]
deepspeed = [
  "deepspeed~=0.13.4"
]

[project.urls]
repository = "https://github.com/potamides/DeTikZify"

[tool.setuptools_scm]
write_to = "detikzify/_version.py"
parentdir_prefix_version = "detikzify-"

[tool.setuptools.packages.find]
include = ["detikzify*"]
